--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,11 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:id="@+id/toolbar"
+            android:elevation="4dp"
             android:background="?attr/colorPrimary"
+            android:paddingTop="4dp"
             app:layout_scrollFlags="scroll|enterAlways"
+            android:transitionName="actionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
         <android.support.design.widget.TabLayout
