--- a/app/src/main/res/layout/chat_layout.xml
+++ b/app/src/main/res/layout/chat_layout.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/windowBackground">
+    android:background="@color/background">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -32,10 +32,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="2dp">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/layoutToast"/>
         <ImageView
             android:id="@+id/buttonEmoji"
             android:layout_width="40dp"
